# pychlorinator

./: README.md  pyproject.toml
.github/workflows/: publish.yml
pychlorinator/: chlorinator.py  chlorinator_parsers.py
tests/: test_chlorinator_setup_write.py
