[tool.poetry]
name = "pychlorinator"
version = "0.3.3"
description = "Astral Pool Chlorinator BLE API with write support for pH and chlorine setpoints"
authors = ["pbutterworth <3683210+pbutterworth@users.noreply.github.com>"]
maintainers = ["kesawi <14970452+kesawi@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/kesawi/pychlorinator"

[tool.poetry.dependencies]
python = "^3.10"
pycryptodome = "^3.17"
bleak = ">=0.19.0"
bleak_retry_connector = ">=4.4.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/kesawi/pychlorinator"